--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
+.app {
+  position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  min-height: 100vh;
+  margin: auto;
+  background-color: #C0ECFF;
+}
+
+.left-side {
+  min-width: 50%;
+  padding-top: 30vh;
+  padding-left: 50px;
+}
+
+.waterdrop {
+  width: 35%;
+  padding-top: 40vh;
+  padding-left: 250px;
+  z-index: -1;
+}
+
+.red-section {
+  min-height: 100vh;
+  padding-left: 30px;
+}
+
+.blue-section {
+  background: linear-gradient(180deg, rgba(0,170,229,1) 0%, rgba(0,140,189,0.92) 45%, rgba(0,98,132,1) 100%);
+  min-height: 80vh;
+  margin: 0px;
+  padding: 0px;
+  z-index: 10;
+}
+
+.paragraphs {
+  opacity: 0.7;
+}
+
+.waves {
+  position: relative;
+  top: 100px;
+  z-index: 5;
+  max-height: 100%;
+  width: auto;
+  overflow: hidden;
+}
+
+.card {
+  width: 18%;
+  height: 55vh;
+  margin: 20px;
+  text-align: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  display: flex;
+}
+
+.special {
+  padding-top: 10px;
+  color: rgba(0,170,229);
+}
+
+.costCards {
+
+}
+
+.list {
+  margin-top: 20px;
+}
+
+h2 {
+  font-size: 48px;
   color: white;
-}
+  padding-top: 100px;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
